prevent icon from wrapping

--- a/src/OrderSummary.css
+++ b/src/OrderSummary.css
@@ -40,4 +40,5 @@ tbody tr:nth-child(odd):hover {
   text-align: left;
   width: 100%;
   height: 100%;
+  white-space: nowrap;
 }
